# ticket-management

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  alembic.ini  docker-compose.override.yml.example  docker-compose.yml  harness.config.example  harness.example  pyproject.toml
.cursor/: hooks.json
.cursor/hooks/: lint-before-git.sh
.cursor/rules/: backend-standards.mdc  explore-before-change.mdc  frontend-standards.mdc  git-sync-with-main.mdc  linting-standards.mdc  project-overview.mdc  pull-request-template.mdc  security-and-secrets.mdc  testing-standards.mdc
.cursor/skills/code-generation/: SKILL.md
.cursor/skills/code-review/: SKILL.md
.cursor/skills/eslint-check/: SKILL.md
.cursor/skills/git-commit-messages/: SKILL.md
.cursor/skills/phase-completion/: SKILL.md
.cursor/skills/pr-description/: SKILL.md
.cursor/skills/refactoring/: SKILL.md
.cursor/skills/ruff-lint/: SKILL.md
.githooks/: pre-commit  pre-push
apps/backend/: requirements-dev.txt  requirements.txt
apps/backend/app/: main.py
apps/backend/app/core/: config.py  deps.py  errors.py  exceptions.py  middleware.py  responses.py  security.py  seed_accounts.py
apps/backend/app/database/: base.py
apps/backend/app/models/: __init__.py  comment.py  enums.py  session.py  ticket.py  user.py
apps/backend/app/repositories/: base.py  comment_repository.py  session_repository.py  ticket_repository.py  user_repository.py
apps/backend/app/routers/: auth.py  comments.py  health.py  protected.py  (+2 more)
apps/backend/scripts/: entrypoint.sh
apps/backend/tests/: conftest.py
apps/frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
apps/frontend/src/: App.tsx  index.css  main.tsx
docker/: backend.Dockerfile  frontend.Dockerfile
migrations/: README.md  env.py
migrations/versions/: 20260718_0001_initial_schema.py
scripts/: git-push.sh  lint.sh  setup-githooks.sh  test-backend.sh
(+101 files in other folders)
